tests/error/ptr_arg_res.gw
// [skip] is reserved
typedef void test(int this){}
